# NLP_Project

./: automatic_translate.py  corrected_queries_WIP.csv  evaluate_translations.py  evaluated_translations_with_similarity.csv  evaluated_translations_with_similarity2.csv  main.py  manual_translate.py  pyproject.toml  remove_columns.py  translated_dataset_tagalog.csv  translated_dataset_tagalog2.csv  updated_corrected_queries_WIP.csv
