[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = ["IndigonaBlue <rdadeveyra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kagglehub = "^0.3.12"
transformers = "^4.53.0"
pandas = "^2.3.0"
torch = "^2.7.1"
sentencepiece = "^0.2.0"
sentence-transformers = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
